[FIX] account_accountant: Notes visible on matched bank transaction
When a bank transaction is reconciled, the "Manual Operations" tab
is no longer visible while we would like to keep access to the statement
narration "Notes" field.
To fix that we add a new tab "Transaction Details" that will appear
on matched transactions and contain the Note details.

task-3336747

closes odoo/enterprise#43796

X-original-commit: c8f7f3a2a9d32e7faf3d7b8d024a437ccfb3e9ee

--- a/account_accountant/static/src/components/bank_reconciliation/kanban.scss
+++ b/account_accountant/static/src/components/bank_reconciliation/kanban.scss
@@ -220,7 +220,7 @@
                 }
 
 
-                .bank_rec_widget_form_discuss_anchor{
+                .bank_rec_widget_form_discuss_anchor, .bank_rec_widget_form_transaction_details_anchor{
                     padding: 0 20px;
                 }
             }
